--- a/MyApplication/ViewDemo/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication/ViewDemo/app/src/main/res/layout/activity_main.xml
@@ -1,22 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.test.viewdemo.MainActivity">
 
-    <com.test.viewdemo.xview.DragView
+    <com.test.viewdemo.xview.BarGraph
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+ <!--   <com.test.viewdemo.xview.DragView
         android:layout_width="50dp"
         android:background="#000000"
         android:layout_height="50dp" />
 
-    <TextView
+    <ImageView
         android:text="Hello World!"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-</RelativeLayout>
+        android:id="@+id/circle_drawable_test"
+        android:layout_width="50dp"
+        android:layout_height="50dp" /-->>
+</LinearLayout>
