--- a/MyApplication/ViewDemo/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication/ViewDemo/app/src/main/res/layout/activity_main.xml
@@ -11,16 +11,16 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.test.viewdemo.MainActivity">
 
-    <LinearLayout
+<!--    <LinearLayout
         android:background="@color/colorAccent"
         android:orientation="horizontal"
         android:id="@+id/text_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"></LinearLayout>
+        android:layout_height="wrap_content"></LinearLayout>-->
 
-    <!--<com.test.viewdemo.xview.BarGraph
+    <com.test.viewdemo.xview.BarGraph
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>-->
+        android:layout_height="match_parent"/>
  <!--   <com.test.viewdemo.xview.DragView
         android:layout_width="50dp"
         android:background="#000000"
