跑马灯效果

--- a/MyApplication/ViewDemo/app/src/main/res/layout/activity_marquee_view.xml
+++ b/MyApplication/ViewDemo/app/src/main/res/layout/activity_marquee_view.xml
@@ -5,11 +5,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.test.viewdemo.MarqueeViewActivity">
-
-    <com.test.viewdemo.xview.MarqueeView
+    <com.test.viewdemo.xview.marqueeView.MarqueeViewByAniamtion
         android:id="@+id/marquee_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="开始"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="finishPage"
+        android:text="结束页面"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="finishAniamtion"
+        android:text="结束动画"/>
+
+
+
 
 </LinearLayout>
