--- a/MyApplication/ViewDemo/app/src/main/res/layout/activity_view_compat_demo.xml
+++ b/MyApplication/ViewDemo/app/src/main/res/layout/activity_view_compat_demo.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.test.viewdemo.coordinateDemo.ViewCompatDemoActivity">
+    tools:context="com.test.viewdemo.coordinateDemo.viewCompatOffsetDemo.ViewCompatDemoActivity">
        <EditText
            android:inputType="number"
            android:id="@+id/offset_value_et"
