--- a/MyApplication/ViewDemo/app/src/main/res/layout/activity_page_view_use.xml
+++ b/MyApplication/ViewDemo/app/src/main/res/layout/activity_page_view_use.xml
@@ -5,7 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.test.viewdemo.PageViewUseActivity">
+    tools:context="com.test.viewdemo.viewPager.PageViewUseActivity">
+    <Button
+        android:layout_width="wrap_content"
+        android:text="改变1"
+        android:onClick="change1"
+        android:layout_height="wrap_content"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:text="增加一页"
+        android:onClick="addOnePage"
+        android:layout_height="wrap_content"/>
     <android.support.v4.view.ViewPager
         android:id="@+id/view_page"
         android:layout_width="match_parent"
