--- a/MyApplication/ViewDemo/app/src/main/res/layout/activity_fragment_adapter_use.xml
+++ b/MyApplication/ViewDemo/app/src/main/res/layout/activity_fragment_adapter_use.xml
@@ -6,6 +6,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.test.viewdemo.viewPager.FragmentAdapterUseActivity">
+    <Button
+        android:layout_width="wrap_content"
+        android:text="改变外部数据"
+        android:onClick="changeOutData"
+        android:layout_height="wrap_content"/>
     <android.support.v4.view.ViewPager
         android:id="@+id/view_page"
         android:layout_width="match_parent"
