--- a/MyApplication/ViewDemo/app/src/main/res/layout/activity_slide_demo.xml
+++ b/MyApplication/ViewDemo/app/src/main/res/layout/activity_slide_demo.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.test.viewdemo.SlideDemoActivity">
+    tools:context="com.test.viewdemo.ScrollerDemoActivity">
     <com.test.viewdemo.slideDemo.MyScrollViewUserFling
         android:layout_width="100dp"
         android:layout_height="match_parent">
