--- a/MyApplication/ViewDemo/app/src/main/res/layout/activity_recycler_view_demo.xml
+++ b/MyApplication/ViewDemo/app/src/main/res/layout/activity_recycler_view_demo.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     tools:context="com.test.viewdemo.RecyclerViewDemo.RecyclerViewDemoActivity">
      <android.support.v7.widget.RecyclerView
+         android:background="@color/colorPrimary"
          android:id="@+id/recycler_view"
          android:layout_width="match_parent"
          android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
