DividerItemDecoration,GSpaceItemDecor,VSpaceItemDecor,HSpaceItemDecor xuyabo 2017/11/20 13:41

--- a/MyApplication/ViewDemo/app/src/main/res/layout/activity_recycler_view_demo.xml
+++ b/MyApplication/ViewDemo/app/src/main/res/layout/activity_recycler_view_demo.xml
@@ -8,6 +8,7 @@
     tools:context="com.test.viewdemo.RecyclerViewDemo.RecyclerViewDemoActivity">
      <android.support.v7.widget.RecyclerView
          android:id="@+id/recycler_view"
+         android:background="@android:color/darker_gray"
          android:layout_width="match_parent"
          android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
 </LinearLayout>
