--- a/MyApplication/ViewDemo/app/src/main/res/layout/recycler_view_item.xml
+++ b/MyApplication/ViewDemo/app/src/main/res/layout/recycler_view_item.xml
@@ -5,7 +5,8 @@
               android:orientation="vertical">
 
     <TextView
+        android:background="@android:color/white"
         android:id="@+id/text_view"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 </LinearLayout>
