--- a/MyApplication/ViewDemo/app/src/main/res/layout/activity_seek_bar_demo.xml
+++ b/MyApplication/ViewDemo/app/src/main/res/layout/activity_seek_bar_demo.xml
@@ -25,10 +25,6 @@
          app:startProgressColor="#f29310"
          app:endProgressColor="#fd715a"/>
     
-    <com.test.viewdemo.xview.NumberProgressBar
-        android:layout_width="match_parent"
-        android:id="@+id/number_progressbar"
-        android:layout_height="20dp"/>
 
     <com.test.viewdemo.xview.myprogressBar.NumberInProgressView
         android:layout_marginLeft="10dp"
@@ -37,8 +33,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
+    <ImageView
+        android:id="@+id/image_view"
+        android:layout_width="50dp"
+        android:layout_height="50dp"/>
+
     <View
         android:background="@drawable/seek_bar_thumb"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"></View>
+
+
 </LinearLayout>
