--- a/MyApplication/ViewDemo/app/src/main/res/layout/simple_one_item.xml
+++ b/MyApplication/ViewDemo/app/src/main/res/layout/simple_one_item.xml
@@ -9,9 +9,10 @@
     </data>
 
     <LinearLayout
+        android:background="@color/colorAccent"
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="20dp"
+        android:layout_height="50dp"
         android:onClick="@{(view)->viewmodel.onItemClick(view)}">
 
         <TextView
