--- a/MyApplication/ViewDemo/app/src/main/res/layout/activity_fragment_adapter_use.xml
+++ b/MyApplication/ViewDemo/app/src/main/res/layout/activity_fragment_adapter_use.xml
@@ -8,6 +8,11 @@
     tools:context="com.test.viewdemo.viewPager.FragmentAdapterUseActivity">
     <Button
         android:layout_width="wrap_content"
+        android:text="跳转"
+        android:onClick="skip"
+        android:layout_height="wrap_content"/>
+    <Button
+        android:layout_width="wrap_content"
         android:text="改变外部数据"
         android:onClick="changeOutData"
         android:layout_height="wrap_content"/>
