Fragment/SelectorDrawable/ClipDrawable

--- a/MyApplication/ViewDemo/app/src/main/res/layout/activity_animation_test_one.xml
+++ b/MyApplication/ViewDemo/app/src/main/res/layout/activity_animation_test_one.xml
@@ -7,7 +7,15 @@
     android:orientation="vertical"
     tools:context="com.test.viewdemo.animationDrawable.AnimationTestOneActivity">
 
+    <ImageView
+        android:id="@+id/image_view"
+        android:layout_width="50dp"
+        android:layout_height="50dp"/>
 
+    <ImageView
+        android:id="@+id/image_view_2"
+        android:layout_width="50dp"
+        android:layout_height="50dp"/>
     <com.test.viewdemo.animationDrawable.MyCircleView
         android:layout_width="50dp"
         android:id="@+id/my_circle_view"
@@ -16,5 +24,6 @@
         android:layout_width="50dp"
         android:id="@+id/my_arc_view"
         android:layout_height="50dp" />
+
 
 </LinearLayout>
