--- a/MyApplication/ViewDemo/app/src/main/res/layout/activity_measure_demo.xml
+++ b/MyApplication/ViewDemo/app/src/main/res/layout/activity_measure_demo.xml
@@ -15,4 +15,19 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="46dp" />
+
+    <TextView
+        android:id="@+id/wait_measure_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/red_strok_round_small_corner"
+        android:paddingLeft="20dp"
+        android:paddingRight="10dp"
+        android:layout_marginTop="33dp"
+        android:text="待测量件待测量控件待测件"
+        app:layout_constraintLeft_toLeftOf="@+id/button1"
+        app:layout_constraintTop_toBottomOf="@+id/button1"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"/>
+
 </android.support.constraint.ConstraintLayout>
