--- a/MyApplication/ViewDemo/app/src/main/res/layout/activity_verify_fragment.xml
+++ b/MyApplication/ViewDemo/app/src/main/res/layout/activity_verify_fragment.xml
@@ -12,6 +12,11 @@
       android:text="skip"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"/>
+    <Button
+      android:onClick="add"
+      android:text="add"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"/>
    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
