使用ViewPager实现可以翻页的TabLayout

--- a/MyApplication/ViewDemo/app/src/main/res/layout/activity_page_view_use.xml
+++ b/MyApplication/ViewDemo/app/src/main/res/layout/activity_page_view_use.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.test.viewdemo.viewPager.PageViewUseActivity">
+    tools:context="com.test.viewdemo.contentViewPager.changeData.PageViewUseActivity">
     <Button
         android:layout_width="wrap_content"
         android:text="改变1"
