--- a/MyApplication/ViewDemo/app/src/main/res/layout/activity_fragment_adapter_use.xml
+++ b/MyApplication/ViewDemo/app/src/main/res/layout/activity_fragment_adapter_use.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.test.viewdemo.viewPager.FragmentAdapterUseActivity">
+    tools:context="com.test.viewdemo.contentViewPager.changeData.FragmentAdapterUseActivity">
     <Button
         android:layout_width="wrap_content"
         android:text="跳转"
