--- a/MyApplication/ViewDemo/app/src/main/res/layout/activity_recycler_view_demo.xml
+++ b/MyApplication/ViewDemo/app/src/main/res/layout/activity_recycler_view_demo.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.test.viewdemo.RecyclerViewDemo.itemDcorarionDemo.RecyclerViewDemoActivity">
+    tools:context="com.test.viewdemo.RecyclerViewDemo.RecyclerViewDemoActivity">
      <android.support.v7.widget.RecyclerView
          android:id="@+id/recycler_view"
          android:background="@android:color/darker_gray"
