--- a/MyApplication/ViewDemo/app/src/main/res/layout/activity_verify_fragment_method.xml
+++ b/MyApplication/ViewDemo/app/src/main/res/layout/activity_verify_fragment_method.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.test.viewdemo.viewPager.verifyFragmentManager.VerifyFragmentTranctionActivity">
+    tools:context="com.test.viewdemo.contentViewPager.verifyFragmentManager.VerifyFragmentTranctionActivity">
   <Button
       android:text="onlyAddFragment"
       android:onClick="onlyAddFragment"
