--- a/MyApplication/ViewDemo/app/src/main/res/layout/content_matrix_demo.xml
+++ b/MyApplication/ViewDemo/app/src/main/res/layout/content_matrix_demo.xml
@@ -5,9 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.test.viewdemo.contentViewPager.verifyFragmentManager.VerifyFragmentManagerActivity">
-  <FrameLayout
-      android:id="@+id/container"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"></FrameLayout>
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context="com.test.viewdemo.animationDemo.MatrixDemoActivity"
+    tools:showIn="@layout/activity_matrix_demo">
+
 </android.support.constraint.ConstraintLayout>
