--- a/MyApplication/ViewDemo/app/src/main/res/layout/activity_view_pager_lisenter.xml
+++ b/MyApplication/ViewDemo/app/src/main/res/layout/activity_view_pager_lisenter.xml
@@ -5,27 +5,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
->
+    tools:context="com.test.viewdemo.viewPager.viewpagerListener.ViewPagerLisenterActivity">
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/content_view_pager"
+        android:id="@+id/view_page"
         android:layout_width="0dp"
-        android:layout_height="200dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
-
-    <com.test.viewdemo.viewPager.extensionvsion2.tabLayoutByViewPager.TabLayoutViewPager
-        android:id="@+id/tab_view_pager"
-        android:layout_width="0dp"
-        android:layout_height="200dp"
+        android:layout_height="0dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/content_view_pager"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 </android.support.constraint.ConstraintLayout>
