--- a/AndroidPerformance/app/src/main/res/layout/activity_custom.xml
+++ b/AndroidPerformance/app/src/main/res/layout/activity_custom.xml
@@ -15,4 +15,8 @@
        android:id="@+id/performanceview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
+   <ImageView
+       android:layout_width="wrap_content"
+       android:id="@+id/imageview"
+       android:layout_height="wrap_content"/>
 </LinearLayout>
