--- a/MyApplication/ViewDemo/app/src/main/res/layout/activity_dispatch_touch_event_demo.xml
+++ b/MyApplication/ViewDemo/app/src/main/res/layout/activity_dispatch_touch_event_demo.xml
@@ -1,10 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<com.test.viewdemo.TouchEventDemo.TestDisFrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.test.viewdemo.TouchEventDemo.DispatchTouchEventDemoActivity">
+  <LinearLayout
+      android:orientation="vertical"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content">
+  <com.test.viewdemo.TouchEventDemo.TestDisView
+      android:clickable="true"
+      android:layout_width="100dp"
+      android:background="@color/colorPrimary"
+      android:layout_height="100dp"/>
 
-</android.support.constraint.ConstraintLayout>
+    <View
+        android:background="@color/colorAccent"
+        android:layout_width="200dp"
+        android:layout_height="300dp"></View>
+    <View
+        android:background="#000000"
+        android:layout_width="200dp"
+        android:layout_height="800dp"></View>
+  </LinearLayout>
+</com.test.viewdemo.TouchEventDemo.TestDisFrameLayout>
