--- a/MyApplication/ViewDemo/app/src/main/res/layout/activity_learn_measure.xml
+++ b/MyApplication/ViewDemo/app/src/main/res/layout/activity_learn_measure.xml
@@ -20,4 +20,8 @@
         android:layout_height="50dp"
         android:background="@color/colorPrimary"/>
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:background="@drawable/shape"
+        android:layout_height="wrap_content"/>
 </LinearLayout>
