--- a/MyApplication/ViewDemo/app/src/main/res/layout/activity_scroll_demo.xml
+++ b/MyApplication/ViewDemo/app/src/main/res/layout/activity_scroll_demo.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
+    android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.test.viewdemo.BaseDraw.ScrollDemoActivity">
 
-</android.support.constraint.ConstraintLayout>
+    tools:context="com.test.viewdemo.BaseDraw.ScrollDemoActivity">
+    <Button
+        android:layout_width="wrap_content"
+        android:text="scrollBtn"
+        android:id="@+id/scroll_btn"
+        android:layout_height="wrap_content"/>
+
+</LinearLayout>
