--- a/MyApplication/ViewDemo/app/src/main/res/layout/linearlayout_test.xml
+++ b/MyApplication/ViewDemo/app/src/main/res/layout/linearlayout_test.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
+              android:gravity="bottom"
+              android:paddingTop="100dp"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
+   <Button
+       android:layout_width="wrap_content"
+       android:text="大家好1"
+       android:layout_height="wrap_content"/>
 
 </LinearLayout>
