--- a/AndroidPerformance/app/src/main/res/layout/activity_leak_canary_host.xml
+++ b/AndroidPerformance/app/src/main/res/layout/activity_leak_canary_host.xml
@@ -7,4 +7,14 @@
     android:layout_height="match_parent"
     tools:context="com.example.xuyabo.androidperformance.memoryDemo.LeakCanaryHostActivity">
 
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="跳转"
+        android:onClick="skipToLeack"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 </android.support.constraint.ConstraintLayout>
