--- a/MyApplication/ViewDemo/app/src/main/res/anim/popshow_anim.xml
+++ b/MyApplication/ViewDemo/app/src/main/res/anim/popshow_anim.xml
@@ -1,8 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android">
-
     <alpha
-        android:duration="500"
-        android:fromAlpha="0.5"
-        android:toAlpha="1.0" />
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:duration="5000"
+        android:fromAlpha="0.0"
+        android:interpolator="@android:anim/accelerate_interpolator"
+        android:toAlpha="1.0"
+        />
+    <scale
+        android:duration="5000"
+        android:fromXScale="0"
+        android:fromYScale="0"
+        android:interpolator="@android:anim/accelerate_interpolator"
+        android:pivotX="50%"
+        android:pivotY="50%"
+        android:toXScale="1"
+        android:toYScale="1"/>
 </set>
