--- a/MyApplication/ViewDemo/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication/ViewDemo/app/src/main/res/layout/activity_main.xml
@@ -12,8 +12,18 @@
     tools:context="com.test.viewdemo.MainActivity">
 
 
-    <com.test.viewdemo.xview.BarGraph
+ <!--   <com.test.viewdemo.xview.BarGraph
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"/>-->
+
+    <com.test.viewdemo.xview.CircleSeekBar
+        android:id="@+id/circleSeekBar"
+        android:layout_width="100dp"
+        android:layout_height="100dp"/>
+    
+    <com.test.viewdemo.xview.RippleView
+        android:id="@+id/rippleView"
+        android:layout_width="119dp"
+        android:layout_height="119dp"/>
 
 </LinearLayout>
