--- a/MyApplication/ViewDemo/app/src/main/res/layout/activity_show_all_app.xml
+++ b/MyApplication/ViewDemo/app/src/main/res/layout/activity_show_all_app.xml
@@ -6,7 +6,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.test.viewdemo.RxAndroidDemo.ShowAllAppActivity">
-
+   <Button
+       android:layout_width="wrap_content"
+       android:onClick="showDialog"
+       android:layout_height="wrap_content"/>
     <android.support.v4.widget.SwipeRefreshLayout
         android:layout_width="match_parent"
         android:id="@+id/refresh_layout"
