--- a/MyApplication/ViewDemo/app/src/main/res/layout/activity_earth.xml
+++ b/MyApplication/ViewDemo/app/src/main/res/layout/activity_earth.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,13 +7,44 @@
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
     tools:context=".xview.EarthActivity">
-    <View
-        android:layout_width="50dp"
-        android:layout_height="50dp"></View>
+
+    <com.test.viewdemo.xview.EarthHoriScrollView
+        android:layout_width="400dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:layout_gravity="center_vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            >
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:scaleType="centerCrop"
+                android:src="@drawable/mc_bg_map_with_never_study"/>
+
+            <ImageView
+                android:scaleType="centerCrop"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/mc_bg_map_with_never_study"/>
+        </LinearLayout>
+    </com.test.viewdemo.xview.EarthHoriScrollView>
+
     <com.test.viewdemo.xview.EarthView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:background="@android:color/transparent"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
 
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
